--- a/src/components/post-navigator/style.scss
+++ b/src/components/post-navigator/style.scss
@@ -5,6 +5,7 @@
   width: 100%;
   grid-template-columns: 49.3% 49.3%;
   column-gap: 1.4%;
+  margin-bottom: 80px;
 
   .post-card {
     display: flex;
