2024. 11. 28 - Portfolio DevLog 이식 (006 ~ 007) - 마크다운 css 수정 (이미지 box-shadow, word-break, text-align...) - 상단 nav 구분선 추가

--- a/src/components/post-card-column/style.scss
+++ b/src/components/post-card-column/style.scss
@@ -15,9 +15,12 @@
     }
 
     .more-post-card-button {
-      height: 40px;
-      font-weight: 500;
+      margin-top: 20px;
+      height: 42px;
+      font-family: 'Montserrat';
+      font-weight: 400;
       font-size: 15px;
+      letter-spacing: -0.025em;
       background-color: var(--button-background-color);
       color: var(--tab-hover-text-color);
     }
