--- a/src/components/page-header/style.scss
+++ b/src/components/page-header/style.scss
@@ -23,9 +23,12 @@
     .trailing-section {
       display: flex;
       align-items: center;
+      justify-content: space-around;
 
       .link {
-        margin-right: 10px;
+        padding-left: 6px;
+        padding-right: 6px;
+        border-right: 1px #2020202a solid;
 
         letter-spacing: 0px;
         font-size: 14px;
@@ -33,8 +36,14 @@
 
         @include md {
           font-size: 15px;
-          margin-right: 20px;
+          // margin-right: 20px;
+          padding-left: 10px;
+          padding-right: 10px;
         }
+      }
+
+      .link:nth-last-child(2) {
+        border-right: none;
       }
 
     }
