--- a/src/styles/_markdown-style.scss
+++ b/src/styles/_markdown-style.scss
@@ -671,7 +671,7 @@
   margin-bottom: 4px;
 }
 
-.markdown p+ul {
+.markdown p+ul, .markdown p+ol {
   margin-top: -15px;
 }
 
@@ -1112,4 +1112,21 @@
 .markdown em {
   color: #6a737d;
   font-style: italic;
+}
+
+.markdown pre::-webkit-scrollbar {
+  display: block;
+  width: auto;
+  height: 1em;
+}
+
+.markdown pre::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+ 
+.markdown pre::-webkit-scrollbar-thumb {
+  background-clip: padding-box;
+  border: 5px solid transparent;
+  background-color: #ffffff44;
+  border-radius: 999px;
 }
