--- a/src/styles/_markdown-style.scss
+++ b/src/styles/_markdown-style.scss
@@ -611,7 +611,7 @@
 }
 
 .markdown hr {
-  border-bottom-color: #eee;
+  border-bottom-color: var(--markdown-blockquote-border-color);
 }
 
 .markdown kbd {
@@ -679,7 +679,7 @@
   height: 0.05em;
   padding: 0;
   margin: 48px 0;
-  background-color: var(--markdown-border-color);
+  background-color: var(--markdown-blockquote-border-color);
   border: 0;
 }
 
@@ -1055,13 +1055,14 @@
       a {
         display: block;
         width: 100%;
-        height: 36px;
-        padding: 6px 2px;
+        height: auto;
+        padding: 8px 30px;
         color: var(--secondary-text-color);
         font-size: 15px;
         font-weight: 400;
         letter-spacing: -0.025em;
         border-bottom: none;
+        line-height: 125%;
       }
     }
 
