2025. 03. 30 - Add Works - Kiaf SEUOL 2024 - Change About Text color react Dark/Light Mode

--- a/src/components/awards-section/style.scss
+++ b/src/components/awards-section/style.scss
@@ -67,7 +67,8 @@
       }
 
       .activity {
-        color: #464646;
+        // color: #464646;
+        color: var(--secondary-text-color);
         font-size: 12px;
         line-height: 20px;
         width: 100%;
