2025. 06. 12 - Update URP - markdown css design - change some css designs

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -6,27 +6,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 45 920;
-  font-style: normal;
-  font-display: swap;
-  src: url('/fonts/Pretendard.woff2') format('woff2-variations');
+    font-family: "Pretendard";
+    font-weight: 45 920;
+    font-style: normal;
+    font-display: swap;
+    src: url('/fonts/Pretendard.woff2') format('woff2-variations');
 }
 
 @font-face {
-  font-family: "Montserrat";
-  font-weight: 45 920;
-  font-style: normal;
-  font-display: swap;
-  src: url('/fonts/Montserrat.woff2') format('woff2-variations');
+    font-family: "Montserrat";
+    font-weight: 45 920;
+    font-style: normal;
+    font-display: swap;
+    src: url('/fonts/Montserrat.woff2') format('woff2-variations');
 }
 
 * {
-  -ms-overflow-style: none;
+    -ms-overflow-style: none;
 }
 
 *::-webkit-scrollbar {
-  display: none;
+    width: 7.5px;
+    height: 7.5px;
+    background-color: transparent;
+    // display: none;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-clip: padding-box;
+    border-radius: 999px;
+    border: 0.5px solid transparent;
+    background-color: var(--scrollbar-thumb-color);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    border: none;
 }
 
 html,
@@ -110,13 +124,14 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -129,37 +144,43 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+    display: block;
 }
+
 body {
-  line-height: 1;
+    line-height: 1;
 }
+
 ol,
 ul {
-  list-style: none;
+    list-style: none;
 }
+
 blockquote,
 q {
-  quotes: none;
+    quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none;
+    content: '';
+    content: none;
 }
+
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
+
 a {
-  text-decoration: none;
-  outline: none;
+    text-decoration: none;
+    outline: none;
 }
 
 li {
-  font-family: 'Pretendard';
-  font-weight: 500;
-  font-size: 13px;
+    font-family: 'Pretendard';
+    font-weight: 500;
+    font-size: 13px;
 }
